testsuite/single/tests/compiler/fail/static_local.c
void main() {
    nosave int x = 5;
}
